[gd_scene load_steps=17 format=2]

[ext_resource path="res://ressources/Ennemies/Ennemy_Fighter/fighter1.png" type="Texture" id=1]
[ext_resource path="res://ressources/Ennemies/Ennemy_Fighter/fighter2.png" type="Texture" id=2]
[ext_resource path="res://ressources/Ennemies/Ennemy_Fighter/fighter3.png" type="Texture" id=3]
[ext_resource path="res://scenes/scripts/EnnemyFighter.gd" type="Script" id=4]
[ext_resource path="res://ressources/Ennemies/Ennemy_Fighter/Destroy/destroy1.png" type="Texture" id=5]
[ext_resource path="res://ressources/Ennemies/Ennemy_Fighter/Destroy/destroy3.png" type="Texture" id=6]
[ext_resource path="res://ressources/Ennemies/Ennemy_Fighter/Destroy/destroy4.png" type="Texture" id=7]
[ext_resource path="res://ressources/Ennemies/Ennemy_Fighter/Destroy/destroy2.png" type="Texture" id=8]
[ext_resource path="res://ressources/Ennemies/Ennemy_Fighter/Shooting/LShooting1.png" type="Texture" id=9]
[ext_resource path="res://ressources/Ennemies/Ennemy_Fighter/Shooting/LShooting2.png" type="Texture" id=10]
[ext_resource path="res://ressources/Ennemies/Ennemy_Fighter/Shooting/RShooting1.png" type="Texture" id=11]
[ext_resource path="res://ressources/Ennemies/Ennemy_Fighter/Shooting/RShooting2.png" type="Texture" id=12]
[ext_resource path="res://scenes/EnnemyFighterProjectile.tscn" type="PackedScene" id=13]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 10.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 8 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "destroy",
"speed": 15.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 12 ) ],
"loop": true,
"name": "RShooting",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "LShooting",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 6.38981
height = 6.50198

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 6.90564, 10.0154 )

[node name="EnnemyFighter" type="KinematicBody2D" groups=[
"fighter",
]]
scale = Vector2( 2, 2 )
z_index = 2
collision_layer = 3
collision_mask = 3
script = ExtResource( 4 )
Projectile = ExtResource( 13 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 0.5 )
shape = SubResource( 2 )

[node name="Hitbox" type="Area2D" parent="." groups=[
"damageableByPlayer",
"partDamager",
]]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 0, 0.5 )
shape = SubResource( 3 )

[node name="Cooldown" type="Timer" parent="."]
one_shot = true

[node name="RCannon" type="Position2D" parent="."]
position = Vector2( 5.5, -10 )
rotation = -1.5708

[node name="LCannon" type="Position2D" parent="."]
position = Vector2( -5.5, -10 )
rotation = -1.5708

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, -150 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="timeout" from="Cooldown" to="." method="_on_Cooldown_timeout"]
